--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "language-typescript",
+  "name": "language-typescript-with-hbs",
   "version": "0.4.11",
-  "description": "TypeScript language support in Atom",
+  "description": "TypeScript language support in Atom with HBS",
   "keywords": [
     "tree-sitter"
   ],
@@ -13,7 +13,7 @@
   "homepage": "https://atom.io/packages/language-typescript",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/language-typescript.git"
+    "url": "https://github.com/scottmessinger/language-typescript.git"
   },
   "license": "MIT",
   "bugs": {
